==> PX4/NuttX/arch/arm/src/kinetis/kinetis_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/wdog.h>
#include <nuttx/semaphore.h>
#include <nuttx/i2c/i2c_master.h>
#include <nuttx/irq.h>
#include <arch/board/board.h>
#include "chip.h"
#include "up_arch.h"
#include "up_internal.h"
#include "kinetis_config.h"
#include "chip.h"
#include "chip/kinetis_i2c.h"
#include "chip/kinetis_sim.h"
#include "chip/kinetis_pinmux.h"
#include "kinetis.h"
#include "kinetis_i2c.h"
#define I2C_TIMEOUT  USEC2TICK(20*1000)   /* 20 mS */
#define I2C_DEFAULT_FREQUENCY 400000
#define STATE_OK                0
#define STATE_ARBITRATION_ERROR 1
#define STATE_TIMEOUT           2
#define STATE_NAK               3
#define MKI2C_OUTPUT(p) (((p) & (_PIN_PORT_MASK | _PIN_MASK)) | \
        GPIO_OPENDRAIN | GPIO_OUTPUT_ONE)
#define MKI2C_INPUT(p) (((p) & (_PIN_PORT_MASK | _PIN_MASK)) | \
        PIN_ANALOG)

static uint8_t kinetis_i2c_getreg(struct kinetis_i2cdev_s *priv,
                                  uint8_t offset)
{
  return getreg8(priv->config->base + offset);
}

static void kinetis_i2c_putreg(struct kinetis_i2cdev_s *priv, uint8_t value,
                               uint8_t offset)
{
  putreg8(value, priv->config->base + offset);
}

static inline void kinetis_i2c_sem_init(FAR struct kinetis_i2cdev_s *priv)
{
  sem_init(&priv->mutex, 0, 1);

  /* This semaphore is used for signaling and, hence, should not have
   * priority inheritance enabled.
   */

  sem_init(&priv->wait, 0, 0);
  sem_setprotocol(&priv->wait, SEM_PRIO_NONE);
}

static inline void kinetis_i2c_sem_destroy(FAR struct kinetis_i2cdev_s *priv)
{
  sem_destroy(&priv->mutex);
  sem_destroy(&priv->wait);
}

static inline void kinetis_i2c_sem_wait(FAR struct kinetis_i2cdev_s *priv)
{
  while (sem_wait(&priv->mutex) != 0)
    {
      DEBUGASSERT(errno == EINTR);
    }
}

static inline void kinetis_i2c_sem_post(struct kinetis_i2cdev_s *priv)
{
  sem_post(&priv->mutex);
}

static int kinetis_i2c_init(FAR struct kinetis_i2cdev_s *priv)
{
  uint32_t regval;

  /* Enable the clock to peripheral */

  modifyreg32(priv->config->clk_reg, 0, priv->config->clk_bit);

  /* Disable while configuring */

  kinetis_i2c_putreg(priv, 0, KINETIS_I2C_C1_OFFSET);

  /* Configure pins */

  if (kinetis_pinconfig(priv->config->scl_pin) < 0)
    {
      return ERROR;
    }

  if (kinetis_pinconfig(priv->config->sda_pin) < 0)
    {
      kinetis_pinconfig(MKI2C_INPUT(priv->config->scl_pin));
      return ERROR;
    }

  /* High-drive select */

  regval = kinetis_i2c_getreg(priv, KINETIS_I2C_C2_OFFSET);
  regval |= I2C_C2_HDRS;
  kinetis_i2c_putreg(priv, regval, KINETIS_I2C_C2_OFFSET);

  /* Attach Interrupt Handler */

  irq_attach(priv->config->irqid, kinetis_i2c_interrupt, priv);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->config->irqid);

  /* Force a frequency update */

  priv->frequency = 0;

  /* Set the default I2C frequency */

  kinetis_i2c_setfrequency(priv, I2C_DEFAULT_FREQUENCY);

  /* Enable I2C */

  kinetis_i2c_putreg(priv, I2C_C1_IICEN, KINETIS_I2C_C1_OFFSET);
  return OK;
}

static int kinetis_i2c_deinit(FAR struct kinetis_i2cdev_s *priv)
{
  /* Disable I2C */

  kinetis_i2c_putreg(priv, 0, KINETIS_I2C_C1_OFFSET);

  /* Unconfigure GPIO pins */

  kinetis_pinconfig(MKI2C_INPUT(priv->config->scl_pin));
  kinetis_pinconfig(MKI2C_INPUT(priv->config->sda_pin));

  /* Disable and detach interrupts */

  up_disable_irq(priv->config->irqid);
  irq_detach(priv->config->irqid);

  /* Disable clocking */

  modifyreg32(priv->config->clk_reg, priv->config->clk_bit, 0);
  return OK;
}

static int kinetis_i2c_transfer(struct i2c_master_s *dev,
                                struct i2c_msg_s *msgs, int count)
{
  struct kinetis_i2cdev_s *priv = (struct kinetis_i2cdev_s *)dev;
  int msg_n;

  i2cinfo("msgs=%p count=%d\n", msgs, count);
  DEBUGASSERT(dev != NULL && msgs != NULL && (unsigned)count <= UINT16_MAX);

  /* Get exclusive access to the I2C bus */

  kinetis_i2c_sem_wait(priv);

  /* Set up for the transfer */

  msg_n       = 0;
  priv->msgs  = msgs;
  priv->nmsg  = count;
  priv->state = STATE_OK;
  priv->wrcnt = 0;
  priv->rdcnt = 0;

  /* Configure the I2C frequency. REVISIT: Note that the frequency is set
   * only on the first message. This could be extended to support
   * different transfer frequencies for each message segment.
   */

  kinetis_i2c_setfrequency(priv, msgs->frequency);

  /* Clear the status flags */

  kinetis_i2c_putreg(priv, I2C_S_IICIF | I2C_S_ARBL, KINETIS_I2C_S_OFFSET);

  /* Process every message */

  while (priv->nmsg > 0 && priv->state == STATE_OK)
    {
      priv->restart = true;

      /* Process NORESTART flag */

      if (priv->nmsg > 1)
        {
          struct i2c_msg_s* nextmsg = (priv->msgs + 1);

          /* If there is a following message with "norestart" flag of
           * the same type as the current one, we can avoid the restart
           */

          if ((nextmsg->flags & I2C_M_NORESTART) &&
              nextmsg->addr == priv->msgs->addr &&
              nextmsg->frequency == priv->msgs->frequency &&
              (nextmsg->flags & I2C_M_READ) == (priv->msgs->flags & I2C_M_READ))
            {
              /* "no restart" can be performed */

              priv->restart = false;
            }
        }

      /* Only send start when required (we are trusting the flags setting to
       * be correctly used here).
       */

      if (!(priv->msgs->flags & I2C_M_NORESTART))
        {
          /* Initiate the transfer, in case restart is required */

          if (kinetis_i2c_start(priv) < 0)
            {
              goto timeout;
            }
        }

      /* Wait for transfer complete */

      wd_start(priv->timeout, I2C_TIMEOUT, kinetis_i2c_timeout, 1,
               (uint32_t) priv);
      kinetis_i2c_wait(priv);

      wd_cancel(priv->timeout);

      msg_n++;
    }

  /* Disable interrupts */

timeout:
  kinetis_i2c_putreg(priv, I2C_C1_IICEN, KINETIS_I2C_C1_OFFSET);

  /* Release access to I2C bus */

  kinetis_i2c_sem_post(priv);

  return (priv->state != STATE_OK) ? -EIO : 0;
}

static int kinetis_i2c_reset(struct i2c_master_s *dev)
{
  struct kinetis_i2cdev_s *priv = (struct kinetis_i2cdev_s *)dev;
  unsigned int clock_count;
  unsigned int stretch_count;
  uint32_t scl_gpio;
  uint32_t sda_gpio;
  uint32_t frequency;
  int ret = ERROR;

  DEBUGASSERT(dev);

  /* Our caller must own a ref */

  DEBUGASSERT(priv->refs > 0);

  /* Lock out other clients */

  kinetis_i2c_sem_wait(priv);

  /* Save the current frequency */

  frequency = priv->frequency;

  /* De-init the port */

  kinetis_i2c_deinit(priv);

  /* Use GPIO configuration to un-wedge the bus */

  scl_gpio = MKI2C_OUTPUT(priv->config->scl_pin);
  sda_gpio = MKI2C_OUTPUT(priv->config->sda_pin);

  kinetis_pinconfig(scl_gpio);
  kinetis_pinconfig(sda_gpio);

  /* Let SDA go high */

  kinetis_gpiowrite(sda_gpio, 1);

  /* Clock the bus until any slaves currently driving it let it go. */

  clock_count = 0;
  while (!kinetis_gpioread(sda_gpio))
    {
      /* Give up if we have tried too hard */

      if (clock_count++ > 10)
        {
          goto out;
        }

      /* Sniff to make sure that clock stretching has finished.
       *
       * If the bus never relaxes, the reset has failed.
       */

      stretch_count = 0;
      while (!kinetis_gpioread(scl_gpio))
        {
          /* Give up if we have tried too hard */

          if (stretch_count++ > 10)
            {
              goto out;
            }

          up_udelay(10);
        }

      /* Drive SCL low */

      kinetis_gpiowrite(scl_gpio, 0);
      up_udelay(10);

      /* Drive SCL high again */

      kinetis_gpiowrite(scl_gpio, 1);
      up_udelay(10);
    }

  /* Generate a start followed by a stop to reset slave
   * state machines.
   */

  kinetis_gpiowrite(sda_gpio, 0);
  up_udelay(10);
  kinetis_gpiowrite(scl_gpio, 0);
  up_udelay(10);
  kinetis_gpiowrite(scl_gpio, 1);
  up_udelay(10);
  kinetis_gpiowrite(sda_gpio, 1);
  up_udelay(10);

  /* Revert the GPIO configuration. */

  kinetis_pinconfig(MKI2C_INPUT(sda_gpio));
  kinetis_pinconfig(MKI2C_INPUT(scl_gpio));
  ret = OK;

  /* Re-init the port (even on error to enable clock) */

out:
  kinetis_i2c_init(priv);

  /* Restore the frequency */

  kinetis_i2c_setfrequency(priv, frequency);

  /* Release the port for re-use by other clients */

  kinetis_i2c_sem_post(priv);
  return ret;
}

struct i2c_master_s *kinetis_i2cbus_initialize(int port)
{
  struct kinetis_i2cdev_s *priv;
  irqstate_t flags;

  i2cinfo("port=%d\n", port);

  switch(port)
    {
#ifdef CONFIG_KINETIS_I2C0
  case 0:
    priv           = &g_i2c0_dev;
    break;
#endif
#ifdef CONFIG_KINETIS_I2C1
  case 1:
    priv           = &g_i2c1_dev;
    break;
#endif
#ifdef CONFIG_KINETIS_I2C2
  case 2:
    priv           = &g_i2c2_dev;
    break;
#endif
#ifdef CONFIG_KINETIS_I2C3
  case 3:
    priv           = &g_i2c3_dev;
    break;
#endif
  default:
    i2cerr("ERROR: Kinetis I2C Only suppors ports 0 and %d\n", KINETIS_NI2C-1);
    return NULL;
    }

  flags = enter_critical_section();
  if ((volatile int)priv->refs++ == 0)
    {
      priv->timeout = wd_create();
      DEBUGASSERT(priv->timeout != 0);
      if (priv->timeout == NULL)
      {
          priv->refs--;
          goto errout;
      }
      kinetis_i2c_sem_init(priv);
      kinetis_i2c_init(priv);
    }
  leave_critical_section(flags);

  return &priv->dev;

errout:
  leave_critical_section(flags);
  return NULL;

}

int kinetis_i2cbus_uninitialize(struct i2c_master_s *dev)
{
  struct kinetis_i2cdev_s *priv = (struct kinetis_i2cdev_s *)dev;
  irqstate_t flags;

  DEBUGASSERT(priv != NULL);

  /* Decrement reference count and check for underflow */

  if (priv->refs == 0)
    {
      return ERROR;
    }

  flags = enter_critical_section();

  if (--priv->refs)
    {
      leave_critical_section(flags);
      return OK;
    }

  leave_critical_section(flags);

  /* Disable power and other HW resource (GPIO's) */

  kinetis_i2c_deinit(priv);
  kinetis_i2c_sem_destroy(priv);
  wd_delete(priv->timeout);
  return OK;
}
